tests/errors/error_string_bounds.nimmy
# Error: String index out of bounds
let s = "hi"
echo s[10]